# dataapi

./: .dockerignore  .env.test  .gitignore  Dockerfile  Dockerfile.aws.lambda  Procfile  README.md  app.py  dependencies.py  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: main.yml
CommCare/: MusoBeneficiariesCase.py  MusoGroupesCase.py  MusoHousehold2022Case.py
app/: app.py  dependencies.py  main.py
app/CommCare/: BulkUpload.py  MusoBeneficiariesCase.py  MusoGroupesCase.py  MusoHousehold2022Case.py  PTMEOtherVisitForm.py  __init__.py  gardenRegistration.py
app/config/: __init__.py  celery_utils.py
app/core/: CommCareAPI.py  __init__.py  commCare_API.py  config.py  mongodb.py  mysql.py  settings.py
app/dataanalysis/: __init__.py  formtodb.py  gardening.py  muso_beneficiaries.py  muso_groupes.py  muso_household_2022.py
app/db/: __init__.py  data.py  datim_pmtct.py  datim_schooling.py  education.py  form.py  muso_beneficiary.py  muso_group.py  muso_household_2022.py  ovc_muso.py  pmtct.py  question.py  user.py  vbg.py
app/models/: form.py  report.py
app/routers/: __init__.py  admin.py  form.py  (+6 more)
core/: CommCareAPI.py  config.py  security.py
dataanalysis/: muso_beneficiaries.py  muso_groupes.py  muso_household_2022.py
db/: data.py  form.py  muso_beneficiary.py  muso_group.py  muso_household_2022.py  mysql.py  question.py  user.py
models/: form.py  form_data.py  question.py  token.py  user.py
routers/: form.py  form_data.py  login.py  questions.py  register.py
utils/: data.py
(+77 files in other folders)
